--- a/app/index.jade
+++ b/app/index.jade
@@ -5,42 +5,42 @@ html(lang='en')
 		title Super Calc
 		link(rel='stylesheet', href='css/app.css')
 	body
-		h1 Super Calc
+		#page-wrap
+			h1#title Super Calc
 
-		table
-			tbody
-				tr
-					td#display(colspan=5)
-				tr
-					td.number.button 7
-					td.number.button 8
-					td.number.button 9
-					td.operator.button +
-					td.operator.button E
-				tr
-					td.number.button 4
-					td.number.button 5
-					td.number.button 6
-					td.operator.button -
-					td.operator.button P
-				tr
-					td.number.button 1
-					td.number.button 2
-					td.number.button 3
-					td.operator.button x
-					td.operator.button S
-				tr
-					td.number.button 0
-					td.number.button .
-					td.clear.button#clear-display C
-					td.operator.button /
-					td.operator.button !
-				tr
-					td.clear.button#clear-box CB
-					td.button#push PU
-					td.number.button
-					td.operator.button
-					td.operator.button
+			table#calculator
+				tbody
+					tr
+						td#display(colspan=5) 0
+					tr
+						td.number.button 7
+						td.number.button 8
+						td.number.button 9
+						td.operator.button +
+						td.operator.button Σ
+					tr
+						td.number.button 4
+						td.number.button 5
+						td.number.button 6
+						td.operator.button -
+						td.operator.button x
+							sup y
+					tr
+						td.number.button 1
+						td.number.button 2
+						td.number.button 3
+						td.operator.button x
+						td.operator.button √
+					tr
+						td.number.button 0
+						td.button#decimal .
+						td.operator.button#sign ±
+						td.operator.button ÷
+						td.operator.button !
+					tr
+						td.clear.button#clear-display C
+						td.clear.button#clear-box(colspan=2) C B
+						td.button#push(colspan=2) P U
 
 		script(src='js/vendor/jquery-2.1.0.js')
 		script(src='js/source/main.js')
