--- a/app/index.jade
+++ b/app/index.jade
@@ -16,31 +16,32 @@ html(lang='en')
 						td.number.button 7
 						td.number.button 8
 						td.number.button 9
-						td.operator.button +
-						td.operator.button Σ
+						td.operator.button(data-op='add') +
+						td.operator.button(data-op='sum') Σ
 					tr
 						td.number.button 4
 						td.number.button 5
 						td.number.button 6
-						td.operator.button -
-						td.operator.button x
+						td.operator.button(data-op='subtract') -
+						td.operator.button(data-op='exponent') x
 							sup y
 					tr
 						td.number.button 1
 						td.number.button 2
 						td.number.button 3
-						td.operator.button x
-						td.operator.button √
+						td.operator.button(data-op='multiply') x
+						td.operator.button(data-op='squareroot') √
 					tr
 						td.number.button 0
 						td.button#decimal .
-						td.operator.button#sign ±
-						td.operator.button ÷
-						td.operator.button !
+						td.button#sign ±
+						td.operator.button(data-op='divide') ÷
+						td.operator.button(data-op='factorial') !
 					tr
 						td.clear.button#clear-display C
 						td.clear.button#clear-box(colspan=2) C B
 						td.button#push(colspan=2) P U
+			#queue
 
 		script(src='js/vendor/jquery-2.1.0.js')
 		script(src='js/source/main.js')
